Støtte VTAO bak feature-toggle
VTAO er lagt til som en tiltakstype. En feature-toggle er skrudd på
for å unngå at VTAO-avtaler kan opprettes i produksjon foreløpig.

Co-authored-by: Magnus Rom <magnus.skalleberg.rom@nav.no>
Co-authored-by: Mickel <majjki@users.noreply.github.com>
Co-authored-by: Millad.Dagdoni <millad.dagdoni@nav.no>